@@ -16,7 +16,7 @@ The rules for this file:
   
 ??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
          ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
-         xhgchen, jaclark5, DrDomenicoMarson
+         xhgchen, jaclark5, DrDomenicoMarson, PicoCentauri
  * 2.5.0
 
 Fixes
@@ -34,6 +34,8 @@ Fixes
     (Issue #3336)
 
 Enhancements
+  * Add a `AnalayisCollection` class to perform multiple analysis on the same
+    trajectory (#3569, PR #4017).
   * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
     PR #3905)
   * Add support for TPR files produced by Gromacs 2023 (Issue #4047)
